# rust_rgb

./: Cargo.toml
src/: main.rs
