[package]
name = "rust_rgb"
version = "0.1.0"
authors = ["Zakru <sakari.leukkunen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
platform-dirs = "0.2"
serialport = "3.3"
tokio-serial = "3.3"
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
